# medusa

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.html  README.md  build_docs  build_docs.sh  build_wheels  download_assets.py  genindex.html  index.html  install_deca.sh  install_pytorch.sh  mp.npz  objects.inv  py-modindex.html  pyproject.toml  pyproject_cpu.toml  pyproject_gpu.toml  pyproject_template.toml  pytest.ini  regenerate_test_data.py  requirements.txt  run_doctests  run_tests  run_tests.sh  run_unittests  search.html  searchindex.js  set_package_version.py  setup.py  validate_external_data.py
.github/: publish.yml
.github/workflows/: CI.yml  ci.yaml  docs.yaml  docs_and_ci.yml  publish.yml  setup-medusa.yml  tests.yaml
_modules/: index.html
_modules/medusa/: analysis.html  benchmark.html  epoch.html  geometry.html  io.html  log.html  onnx.html  tracking.html  transforms.html
_sources/: README.md  index.md
_sources/api/: cli.md  python.md
_sources/examples/: quantifying_total_movement.ipynb
_sources/getting_started/: citation.md  installation.md  license.md  quickstart.ipynb  quickstart.md  quikstart.ipynb
_sources/misc/: bibliography.md  conduct.md  for_developers.md
_sources/tutorials/: analysis.ipynb  data_representation.ipynb  experimentation.ipynb  face_and_landmark_detection.ipynb  face_detection.ipynb  landmark_detection_and_cropping.ipynb  preprocessing.ipynb  reconstruction.ipynb  rendering.ipynb  speed_benchmarks.ipynb
api/: cli.html  python.html
api/python/: index.html
builds/cpu/: pyproject.toml
builds/gpu/: pyproject.toml
ci/: download_data  download_data.sh  run_coverage  run_coverage.sh  run_doctests  run_interrogate  run_interrogate.sh  run_notebooks  run_tests.sh  run_unittests
demos/: teaser.py  utils.py
docs/: _config.yml  _toc.yml  build_docs  index.md  linkcode.py  push_docs  references.bib  test_docs
docs/api/: cli.md  python.md
docs/autoapi/: conf.py  index.rst
docs/examples/: quantifying_total_movement.ipynb
docs/getting_started/: citation.md  installation.md  quickstart.ipynb  quikstart.ipynb
docs/misc/: contributing.md  for_developers.md
docs/tutorials/: data_representation.ipynb  face_and_landmark_detection.ipynb  face_detection.ipynb  reconstruction.ipynb  rendering.ipynb
examples/: quantifying_total_movement.html
exp/: browraiser_new.psyexp
exp/task-browraiser/: conditions.csv  task-browraiser.psyexp
exp/task-combi/: conditions.csv  task-combi.psyexp
exp/task-eyesclosed/: conditions.csv  task-eyesclosed.psyexp
exp/task-mouthstretch/: conditions.csv  task-mouthstretch.psyexp
exp/task-pitchyaw/: conditions.csv  task-pitchyaw.psyexp
exp/task-translatexyz/: conditions.csv  task-translatexyz.psyexp
getting_started/: citation.html  installation.html  license.html  quickstart.html  quikstart.html
gmfx/: cli.py  cmd.py  constants.py  data.py  epochs.py  io.py  render.py  transforms.py  utils.py  version.py
gmfx/configs/: deca.yaml
gmfx/data/: faces_flame_dense.npy  faces_mediapipe.npy  flame_generic_template.npz  mediapipe_triangles.py  test_data.npz
gmfx/detect/: fan.py
gmfx/detection/: __init__.py  fan.py
gmfx/preproc/: align.py  deca.py  epoch.py  filter.py  interpolate.py  recon.py  resample.py
gmfx/recon/: README.md  __init__.py  core.py  deca.py  fan.py  lbs.py  mediapipe.py  utils.py
gmfx/render/: mesh_render.py  rasterizer.py  render.c  renderer.py  renderer_old.py  utils.py
medusa/: __init__.py  analysis.py  au.py  benchmark.py  cli.py  constants.py  core.py  core3d.py  core4d.py  data.py  defaults.py  epoch.py  epochs.py  geometry.py  io.py  log.py  onnx.py  render.py  topology.py  tracking.py  transforms.py  utils.py  version.py
medusa/albedo/: __init__.py  trust.py
medusa/configs/: emoca.yaml  preproc.yml  recon.yaml
medusa/containers/: __init__.py  fourD.py  results.py  threeD.py
medusa/core/: _3D.py  _4D.py  __init__.py  fourD.py  threeD.py
medusa/crop/: __init__.py  align_crop.py  base.py  bbox_crop.py  fan.py  isf.py  square_crop.py
medusa/data/: __init__.py  config.yaml  default_config.yaml  example_data.py  example_vid_desc-recon_model-fan_shape.h5  example_vid_desc-recon_model-mediapipe_shape.h5  example_vid_fan.h5  example_vid_mediapipe.h5  faces_fan.npy  flame_lmk68_embedding.npz  mediapipe_lmk68_embedding.npz  regenerate_example_recon_data.py  scalp_flame.npy  template_data.py
medusa/detect/: LICENSE_retinanet.md  __init__.py  base.py  retinanet.py  scrfd.py  yunet.py
medusa/landmark/: __init__.py  retinaface.py
medusa/preproc/: __init__.py  align.py  epoch.py  filter.py  recon.py  resample.py
medusa/recognize/: __init__.py  retinaface.py
medusa/recon/: README.md  __init__.py  base.py  fan.py  recon.py
medusa/render/: base.py  (+7 more)
misc/: bibliography.html  conduct.html  contributing.html  for_developers.html  speed_benchmarks.html
sandbox/: fan.ipynb  figures.ipynb  mediapipe.ipynb  mne.ipynb  nilearn_plotting.ipynb  proj.ipynb  pyrender.ipynb  pytorch3d.ipynb  sandbox.py  scratchpad.ipynb  siva.ipynb  test.txt  viz.ipynb
scripts/: extract_frame_times.py
speed_benchmarks/: crop.py  detect.py  figures.ipynb  recon_deca.py  render.py  speed_benchmark_crop.tsv  speed_benchmark_detect.tsv  speed_benchmark_recon_flame.tsv  timer.py  videoloader.py
tests/: conftest.py  test_align.py  test_cli.py  test_crop.py  test_data.py  test_data4d.py  test_deca.py  test_detect.py  test_filter.py  test_flame.py  test_genderage.py  test_geometry.py  test_imagerender.py  test_io.py  test_landmark.py  test_mediapipe.py  test_mica.py  test_onnx.py  test_recognition.py  test_render.py  test_render_lights.py  test_tracking.py  test_transforms.py  test_trust.py  test_utils.py  test_videoloader.py  test_videorecon.py  test_videorecon_cli.py  test_videorender.py
tutorials/: analysis.html  data.html  data_representation.html  example_tutorial.html  experimentation.html  face_and_landmark_detection.html  face_detection.html  landmark_detection_and_cropping.html  preprocessing.html  reconstruction.html  rendering.html  speed_benchmarks.html
(+355 files in other folders)
